<resources>
    <string name="app_name">HelpMe</string>
    <string name="action_settings">Settings</string>
    <string name="memberScore">评分:</string>
    <string name="memberPrice">起价:</string>
    <string name="memberDistance">距离:</string>
    <string name="questionTime">提问时间:</string>
    <string name="questionPrice">悬赏:</string>
    <string name="questionType">类型:</string>
    <string name="questionScore">信用分:</string>
    <string name="questionCondition">时间限制:</string>
    <string name="pref_key_user_vip">开通会员</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
