<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/underline">
    <ImageView
        android:id="@+id/memberPic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/memberPic">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/memberScore" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/memberPrice"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/memberDistance"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="m"/>
    </LinearLayout>
    <TextView
        android:id="@+id/memberIntroduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_margin="5dp"
        android:layout_toRightOf="@+id/memberPic" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/overline"
        android:layout_below="@+id/memberIntroduce"
        android:layout_toRightOf="@+id/memberPic"
        android:textSize="13sp"
        android:layout_margin="3dp"
        android:text="主营业务:修水管,修彩电,修电冰箱,代写作业,代写论文,代挂课"/>
</RelativeLayout>